# pypowsybl-grid2opbackend

./: .dockerignore  .gitignore  Authors.txt  ChronicsCreator.py  ChronicsCreatorAuthors.txt  Dockerfile  M3_Notebook.ipynb  README.md  chronics_chreator.py  pyproject.toml  requirements.txt  scriptTest.py  scriptTestDoNothing.py  scriptTestPypowsybl.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: M3_Notebook-checkpoint.ipynb
Grid2OpPowsybl/: pyproject.toml
Grid2OpPowsybl/src/Backend/: PowsyblBackend.py  __init__.py
Grid2OpPowsybl/src/tests/: BaseBackendTestPyPowsybl.py  __init__.py  test_PowsyblBackend.py
Grid2OpPowsyblImplementation/grid2op/Backend/: PowsyblBackend.py
Grid2OpPowsyblImplementation/grid2op/tests/: BaseBackendTestPyPowsybl.py  test_PowsyblBackend.py
Notebook/: CleanWorkflow1stAssessment.ipynb  Conversion issues.ipynb  DoNothingDemonstrationAgent.ipynb  FinalNotebookAssessment.ipynb  Tests move connectable and bugs.ipynb
pypowsybl_grid2opbackend/: ScriptAirgo.py  ScriptForSimpleUseCase.py  __init__.py  basic_tests.py
pypowsybl_grid2opbackend/Backend/: network.py  powsybl_backend.py
pypowsybl_grid2opbackend/data_test/l2rpn_case14_sandbox_Pypowsybl/: config.py  prods_charac.csv
pypowsybl_grid2opbackend/tests/: __init__.py  base_backend_test_powsybl.py  test_powsybl_backend.py
saved_agent_DoNothingAgent_results/000/: actions.npz  agent_exec_times.npz  disc_lines_cascading_failure.npz  env_modifications.npz  episode_meta.json  episode_times.json  observations.npz  opponent_attack.npz  rewards.npz
src/: .gitignore  ScriptAirgo.py  ScriptForSimpleUseCase.py  __init__.py
src/Backend/: PowsyblBackend.py  __init__.py  network.py  powsybl_backend.py
src/data_test/Test_1888rte/: config.py  grid.json  grid.mat  prods_charac.csv
src/data_test/l2rpn_case14_sandbox_Pypowsybl/: config.py  grid.json  grid.mat  grid_layout.json  prods_charac.csv
src/tests/: BaseBackendTestPyPowsybl.py  __init__.py  base_backend_test_powsybl.py  helper_path_test.py  test_PowsyblBackend.py  test_powsybl_backend.py
(+33 files in other folders)
